--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,12 @@ jobs:
         working-directory: zed
         run: cargo install --locked cargo-zigbuild
         
+      - name: Install winget
+        uses: Cyberboss/install-winget@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          wget_release_id: latest
+
       - name: Install zig
         run: winget install -e --id zig.zig
         
